# tradeos-erp

./: .gitignore  README.md
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  seed.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 22810484cd8e_delete_product_name_from_sales_products_.py  38cc5ad59daa_added_product_id_a_fk_in_sales_product_.py  537ba2a3e6fd_added_password_field_in_user_table.py  561d8b7881c9_added_sales_and_sales_product_tables.py  6899f7c3004b_initial_commit.py  dfeb6d601511_add_users_model.py  eed771f45909_initial_migration.py
backend/app/: main.py
backend/app/api/endpoints/: auth.py
backend/app/api/endpoints/customer/: customer_route.py
backend/app/api/endpoints/dashboard/: dashboard_route.py
backend/app/api/endpoints/sales/: sales_route.py
backend/app/api/endpoints/stock/: stock_route.py
backend/app/api/endpoints/user/: user_route.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/exeption/: stock.py
backend/app/model/: __init__.py  customer_model.py  sales_model.py  stock_model.py  users_model.py
backend/app/repository/: customer_repository.py  dashboard_repository.py  sales_repository.py  stock_repository.py  user_repository.py
backend/app/schema/: auth_schema.py  customer_schema.py  sales_schema.py  stock_schema.py  user_schema.py
backend/app/service/: customer_services.py  dashboard_service.py  sales_service.py  stock_service.py  user_service.py
frontend/ecommerce/: Dockerfile  (+6 more)
(+35 files in other folders)
